Rename "placeholders" to "parameters"
This makes more sense from a user's point of view and "placeholders" is a term
 that is used for something else in the Minecraft community already.

Old configs will of course continue to work.